# NohCam

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  build.bat  build_cpp.ps1  fix_dll.ps1  pyproject.toml  sign_dll.ps1  task.md  temp_build.bat  test_param_ranges.py  vcpkg.json
.gemini/antigravity/brain/bb8d8748-4d7b-483c-98be-bbdfee4adfd7/scratch/: test_resolution.py
.gemini/antigravity/brain/f4abc38f-a17c-4918-bf59-9d655b317b59/scratch/: inspect_model.py  inspect_model_v2.py
docs/: live2d-audit.md  live2d-mediapipe-claude.md  live2d-mediapipe-codex.md  plan-python.md  plan.md  simple.md
live2d-viewer/: live2d_viewer.py  main.py  pyproject.toml
mediapipe-vmc-converter/: README.md  config.json  pyproject.toml
mediapipe-vmc-converter/src/mediapipe_vmc_converter/: app.py  cli.py  config.py  filtering.py  landmark.py  solver.py  vmc.py
mediapipe-vmc-converter/tests/: test_solver.py  test_vmc.py
nohcam-tracker/: README.md  main.py  pyproject.toml
nohcam-tracker/src/nohcam_tracker/: __main__.py  app.py  gui.py  tracker.py
src/: main.cpp
src/NohCam.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NohCam.WinUI.csproj  app.manifest
src/app/: Application.cpp  Application.h
src/capture/: CameraCapture.cpp  CameraCapture.h
src/nohcam/: __main__.py  app.py  gui.py  landmark_drawer.py  parameter_display.py  tracker.py
src/pipeline/: PreviewTap.cpp  PreviewTap.h
src/render/: D3D11Renderer.cpp  D3D11Renderer.h
src/tools/: FaceTrackerTest.cpp  ModelMetadataCheck.cpp  OnnxSmokeTest.cpp  TrackingTrackerTest.cpp
src/tracking/: FaceTracker.cpp  FaceTracker.h  FaceTrackerBridge.cpp  HandTracker.cpp  HandTracker.h  OnnxSession.cpp  OnnxSession.h  PoseTracker.cpp  PoseTracker.h  TrackingResult.h  TrackingTracker.cpp  TrackingTracker.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  MainWindow.cpp  MainWindow.h
tests/: test_manual_transform.py
tools/: generate_dummy_face_models.py  generate_smoke_model.py
