[project]
name = "nohcam-tracker"
version = "0.1.0"
description = "MediaPipe Face/Hands/Pose tracker with webcam input"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "wxpython>=4.0",
    "pygame>=2.0",
    "PyOpenGL>=3.0",
    "live2d-py>=0.5.0",
    "pyvirtualcam>=0.5.0",
]

[project.scripts]
nohcam-tracker = "nohcam_tracker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nohcam_tracker"]

[tool.uv]
dev-dependencies = []